# Clinical-trial-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  schemes.py
app/api/: measurements_api.py  patients_api.py  visits_api.py
app/services/: measurement_service.py  patient_service.py  visit_service.py
